<resources>
    <string name="app_name">MyHotix Guest</string>
    <string name="hint_login_email">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="text_login_button">Login</string>
    <string name="error_message_email_is_empty">Enter your E-mail Address</string>
    <string name="error_message_username_is_empty">Enter your Username</string>
    <string name="error_message_phone_is_empty">Enter your Phone number</string>
    <string name="error_message_email_invalid">Enter a valid E-mail Address</string>
    <string name="error_message_password_empty">Enter Your Password</string>
    <string name="error_message_password_does_not_match">Passwords does not match</string>
    <string name="error_message_password_too_short">Password Is Too Short</string>
    <string name="error_message_field_required">This field is required</string>
    <string name="error_message_check_settings">Something went wrong. Check your settings!</string>
    <string name="success_login_message">Login Successful</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_bill">My Bill</string>
    <string name="title_complaint">Complaints</string>
    <string name="title_orders">Orders</string>
    <string name="title_services">Services</string>
    <string name="title_review">Review</string>
    <string name="splash_screen_footer_text">www.MyHotixGuest.com</string>
    <string name="complaints_text">Complaints</string>
    <string name="complaint_menu_add_text">Add</string>
    <string name="complaint_menu_refresh_text">Refresh</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="unreachable_server">Login server is unreachable!</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account_yet">No account yet? </string>
    <string name="sign_up">Sign Up</string>
    <string name="button_send">Send</string>
    <string name="forgot_password_help_text">"You should receive an e-mail containing your new password shortly. "</string>
    <string name="title_activity_login">Activity</string>
    <string name="title_activity_signup">Activity</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_activities">Activities</string>
    <string name="error_message_title_is_empty">The Title  is Empty</string>
    <string name="error_message_complaint_text_is_empty">The Complaint text  is Empty</string>
    <string name="error_message_message_text_is_empty">The Message text  is Empty</string>
    <string name="reservation_details">RESERVATION DETAILS</string>
    <string name="event_details">EVENT DETAILS</string>
    <string name="my_history">MY HISTORY</string>
    <string name="bill_details">BILL</string>
    <string name="home_reservation_text">Current Stay</string>
    <string name="home_my_bill">My Bill</string>
    <string name="home_history">History</string>
    <string name="home_new_reservation">New Reservation</string>
    <string name="new_reservation">New Reservation</string>
    <string name="reservation">Reservation</string>
    <string name="no_reservations">No Reservations</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="job">Profession</string>
    <string name="doc_id">Doc-ID</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_adress">Address</string>
    <string name="events_text">EVENTS</string>
    <string name="orders_text">MY ORDERS</string>
    <string name="services_text">Services</string>
    <string name="day_till_check_in">Day till check-in</string>
    <string name="compaint_treated">treated</string>
    <string name="compaint_waiting">waiting</string>
    <string name="no_activitie_to_show">No activities found.</string>
    <string name="no_complaint_to_show">No complaints found.</string>
    <string name="no_products_to_show">No products found!</string>
    <string name="no_orders_to_show">You have placed no orders yet.</string>
    <string name="no_alarm_to_show">You have not yet set any Alarm.</string>
    <string name="no_rest_resa_to_show">You have no Reservations.</string>
    <string name="no_message_to_show">You have no messages to show.</string>
    <string name="nothing_to_show">Nothing to show!</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="hello">Hello!</string>
    <string name="your_feedback">Your feedback is important to us to improve our services</string>
    <string name="thanks_for_your_time">Thanks for your time!</string>
    <string name="done">DONE</string>
    <string name="canceled">CANCELED</string>
    <string name="validated">VALIDATED</string>
    <string name="personal_information">Personal Information</string>
    <string name="address_information">Address Information</string>
    <string name="signup_nationality">Nationality</string>
    <string name="signup_country">Country</string>
    <string name="signup_civility">Civility</string>
    <string name="hint_phone">Phone</string>
    <string name="visit_date">Visit Date</string>
    <string name="country">Country</string>
    <string name="title_meseges">Messages</string>
    <string name="remember_me">Remember me</string>
    <string name="smooker">Smoker</string>
    <string name="disability">Disability</string>
    <string name="no_item_to_show">No item to show.</string>
    <string name="server_unreachable">The server is unreachable!</string>
    <string name="loading">Loading…</string>
    <string name="no_history_to_show">No History to show.</string>
    <string name="no_bills_to_show">No Bills to show.</string>
    <string name="new_complaint_title">Title</string>
    <string name="new_complaint_subject">Subject</string>
    <string name="new_message_text">Message</string>
    <string name="new_complaint_confirm">Confirm</string>
    <string name="new_complaint_alert_title">New Complaint</string>
    <string name="new_message_alert_title">New Message</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="coomplaint_details">Complaint Details</string>
    <string name="message_details">Message Details</string>
    <string name="order_details">Order Details</string>
    <string name="answer">Answer</string>
    <string name="nationality">Nationality</string>
    <string name="personal_details">Personal Details</string>
    <string name="birth_date">Birth Date</string>
    <string name="birth_place">Birth Place</string>
    <string name="save">Save</string>
    <string name="logout_item_menu">Logout</string>
    <string name="edit_item_menu">Edit</string>
    <string name="logout">Logout</string>
    <string name="login">Login...</string>
    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="exit_msg">Are you sure you want to leave?</string>
    <string name="login_information">Login Information</string>
    <string name="username">Username</string>
    <string name="terms_of_service">When you sign-up for an account you’re required to check the “I agree to the terms of service” checkbox before clicking on the “DONE” button</string>
    <string name="i_agree_to">I agree to the </string>
    <string name="terms_service">" terms of service"</string>
    <string name="used_username">This username has been used</string>
    <string name="used_email">This Email has been used</string>
    <string name="server_down">Server is down please try after some time</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="update_success">Update success.</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="all_btn">All</string>
    <string name="treated_btn">Treated</string>
    <string name="waiting_btn">Waiting</string>
    <string name="title_hotel">Hotel</string>
    <string name="something_wen_wrong">Something went wrong.</string>
    <string name="password_updated_successfully">Password updated successfully.</string>
    <string name="profile_updated_successfully">Profile updated successfully.</string>
    <string name="message_from">"From : "</string>
    <string name="free">FREE</string>
    <string name="filters">FILTERS</string>
    <string name="refresh">REFRESH</string>
    <string name="families">Families</string>
    <string name="sub_families">Sub Families</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="guest_details">Personal details</string>
    <string name="master">MASTER</string>
    <string name="civilite">Civility</string>
    <string name="countries">Countries</string>
    <string name="doc_type">Document type</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="divorced">Divorced</string>
    <string name="message_from_">"Message From : "</string>
    <string name="complaint_treated">Complaint Treated</string>
    <string name="reservation_detail">Reservation Details</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="room">Room</string>
    <string name="room_n">Room N°</string>
    <string name="rate">Rate</string>
    <string name="arrangement">Arrangement</string>
    <string name="edit">EDIT</string>
    <string name="my_bill">My Bill</string>
    <string name="address">Address</string>
    <string name="contacts">Contacts</string>
    <string name="about_hotel">ABOUT HOTEL</string>
    <string name="total">"Total "</string>
    <string name="cart_is_empty">Your cart is empty</string>
    <string name="price">"Price "</string>
    <string name="remove">Remove</string>
    <string name="success">Success</string>
    <string name="success_msg">Order Successfully Added</string>
    <string name="rreceive_notification">Receive Notification</string>
    <string name="off" translatable="false">Off</string>
    <string name="nearby_radius">Nearby Radius</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="show_cart">SHOW CART</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="review">Review</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="babies">Babies</string>
    <string name="connection_failed_title">Connection Failed</string>
    <string name="connection_failed_msg">Please Check your Internet Connection</string>
    <string name="retry">Try Again</string>
    <string name="exit">EXIT</string>
    <string name="which_service_you_experienced">Which service have you experienced?</string>
    <string name="room_accommodation">Room accommodation</string>
    <string name="spa_treatment">SPA Treatment</string>
    <string name="restaurant">Restaurant</string>
    <string name="meetings_and_events">Meetings and Events</string>
    <string name="wedding">Wedding</string>
    <string name="new_msg_categorie">Categorie</string>
</resources>