<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/svg_home_white_512"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/svg_shop_white_512"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_complaints"
        android:icon="@drawable/svg_chat_white_512"
        android:title="@string/title_meseges" />

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/svg_running_white_512"
        android:title="@string/title_activities" />

    <item
        android:id="@+id/navigation_hotel"
        android:icon="@drawable/svg_information_white_512"
        android:title="@string/title_hotel" />

</menu>
