<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <!--  ImgSlide Review 1 Title Label -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/personal_information"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/review1_form_linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="24dp">

        <!--  ImgSlide Review 1 First Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name_review1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_first_name_review1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <!--  ImgSlide Review 1 Last Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last_name_review1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_last_name_review1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <!-- ImgSlide Review 1 Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email_review1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email_review1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- ImgSlide Review 1 Phone Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone_review1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_phone_review1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>
