<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorBackground">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/add_complaint_dialog_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/new_complaint_alert_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Add Complaint Title Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_complaint_dialog_input_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/grey_400">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/add_complaint_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_complaint_title"
            android:inputType="text"
            android:textColor="@color/colorBackground"
            android:theme="@style/MyEditTextStyle" />
    </android.support.design.widget.TextInputLayout>

    <!-- Add Complaint Text Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_complaint_dialog_input_layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:textColorHint="@color/grey_400">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/add_complaint_dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_complaint_subject"
            android:inputType="textMultiLine"
            android:lines="5"
            android:minLines="3"
            android:textColor="@color/colorBackground"
            android:theme="@style/MyEditTextStyle" />
    </android.support.design.widget.TextInputLayout>

    <!-- Add/Cancel Buttons -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:alpha=".5"
            android:background="@color/colorBackground" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/new_complaint_confirm"
            android:textColor="@color/colorBackground" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_toStartOf="@+id/btn_Add"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/cancel"
            android:textColor="@color/colorBackground" />
    </RelativeLayout>

</LinearLayout>
