<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorBackground">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/svg_traffic_cone_white_512" />

    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/connection_failed_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/connection_failed_title"
        android:textColor="@color/colorBackground"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/connection_failed_dialog_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/connection_failed_msg"
        android:textColor="@color/light_bg_dark_secondary_text"
        android:textSize="16sp" />

    <!-- Exit/Retry Buttons -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:alpha=".5"
            android:background="@color/colorBackground" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/connection_failed_dialog_retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/retry"
            android:textColor="@color/colorBackground" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/connection_failed_dialog_exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_toStartOf="@id/connection_failed_dialog_retry_btn"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/exit"
            android:textColor="@color/colorBackground" />
    </RelativeLayout>

</LinearLayout>
