<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorBackground">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/logout_dialog_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/success"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- Add Complaint Title Label -->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/logout_dialog_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/success_msg"
        android:textColor="@color/light_bg_dark_secondary_text"
        android:textSize="16sp" />

    <!-- OK Buttons -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:alpha=".5"
            android:background="@color/colorBackground" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/success_dialog_ok_btn"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/ok"
            android:textColor="@color/colorBackground" />
    </RelativeLayout>

</LinearLayout>
